INDEX: Bug fixed. The nav items were not responsive due to     width: 20vw. This has been removed and bug has been sorted. Also, most classes have been changed to ID as it is used only once throughout the document

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,12 +16,12 @@ body{
 
 /*----------------------------------------------HEAD SECTION*/
 
-.head-section{
+#head-section{
     padding-bottom: 30px;
     text-align: center;
 }
 
-.org-logo{
+#org-logo{
     margin: 0;
     padding: 0;
     padding-left:20px;
@@ -30,7 +30,7 @@ body{
     filter: invert(100%);
 }
 
-.org-name{
+#org-name{
     font-family: "Fjalla One", 'Franklin Gothic Medium';
     margin: 0;
     color: white;
@@ -43,6 +43,7 @@ body{
 /*---------------------------------------NAVIGATION SECTION*/
 .nav{
     justify-content: center;
+    width: 100%;
     
 }
 
@@ -56,8 +57,8 @@ body{
     border-style: solid;
     border-color: white;
     border-width: 2px;
-    width: 20vw;
     height: auto;
+    margin-bottom: 10px;
 }
 
 .navtext a i{
@@ -77,12 +78,12 @@ body{
     border-color: #e41023;
 }
 
-.nav li.active{
+.nav li#active{
     border-color: #e41023;
     border-width: 5px;
 }
 
-.active a span{
+#active a span{
     color: #e41023;
 }
 
